# Nanami_OS

./: .gitmodules  Makefile.toml
.github/workflows/: build-binaries.yml  test-on-qemu.yml
bootloader/: .gitignore  Cargo.toml  Makefile.toml  bootx64.efi
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
devenv/: .gitignore
devenv/OVMF/: .gitignore
kernel/: Cargo.toml  Makefile.toml  x86_64-unknown-elf.json
kernel/.cargo/: config.toml
kernel/src/: main.rs
