[package]
name = "bootloader-rust"
version = "0.1.0"
authors = ["Akihiro Saiki <akihiro_0605@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git"}
elf_rs = "0.1.3"
